--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/css/app.css": "/css/app.css",
-    "/js/admin.js.map": "/js/admin.js.map",
-    "/css/app.css.map": "/css/app.css.map"
+    "/js/admin.js": "/js/admin.js?id=7f52f0277934b2f7dfa0",
+    "/css/app.css": "/css/app.css?id=f861aa11e3f6d774b82e",
+    "/js/admin.js.map": "/js/admin.js.map?id=a55ac8edbe4cf0c553b2",
+    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2"
 }
