--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/admin.js": "/js/admin.js?id=de74dcbc2f7dfdfaa42c",
-    "/css/app.css": "/css/app.css?id=f861aa11e3f6d774b82e",
-    "/js/admin.js.map": "/js/admin.js.map?id=570bafb8f22b3b677640",
-    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2"
+    "/js/admin.js": "/js/admin.js?id=4ba08a7331b79fb7576a",
+    "/css/app.css": "/css/app.css?id=65436bfaf04f8f7c2a1a"
 }
