--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=4ba08a7331b79fb7576a",
-    "/css/app.css": "/css/app.css?id=65436bfaf04f8f7c2a1a"
+    "/js/admin.js": "/js/admin.js?id=3b43f636488ad02eb86a",
+    "/css/app.css": "/css/app.css?id=f861aa11e3f6d774b82e",
+    "/js/admin.js.map": "/js/admin.js.map?id=69bdd4ffb7e861a8f269",
+    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2"
 }
