--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /public/js/admin.js
 /public/js/admin.js.map
 /public/js/manifest.js
+/public/css/app.css
+/public/mix-manifest.json
 /public/js/manifest.js.map
 /public/js/vendor.js
 /public/js/vendor.js.map
