--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /public/js/admin.js.map
 /public/js/manifest.js
 /public/css/app.css
+/public/css/app.css.map
 /public/mix-manifest.json
 /public/js/manifest.js.map
 /public/js/vendor.js
