--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
         "propaganistas/laravel-phone": "^4.0",
+        "pusher/pusher-php-server": "^3.4",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
