--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
         "ant-design-icons": "^1.3.3",
         "array-to-tree": "^3.3.0",
         "element-ui": "^2.6.1",
+        "laravel-echo": "^1.5.3",
         "laravel-file-manager": "^2.1.4",
+        "pusher-js": "^4.4.0",
         "slugify": "^1.3.4",
+        "vee-validate": "^2.2.0",
         "vue-clipboard2": "^0.3.0",
         "vue-croppa": "^1.3.8",
         "vue-feather-icons": "^4.10.0",
+        "vue-notification": "^1.3.16",
         "vue-page-title": "^1.1.4",
         "vue-router": "^3.0.2",
         "vue-tinymce-editor": "^1.6.2",
