--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "alexusmai/laravel-file-manager": "^2.0",
+        "artesaos/seotools": "^0.14.0",
         "atayahmet/laravel-nestable": "^0.8.8",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
