--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
         "babel-preset-stage-2": "^6.24.1",
         "bootstrap": "^4.3.1",
         "browser-sync": "^2.26.3",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.14",
+        "laravel-mix": "^4.0.15",
         "lodash": "^4.17.11",
-        "popper.js": "^1.14.7",
+        "popper.js": "^1.15.0",
         "resolve-url-loader": "^2.3.2",
-        "sass": "^1.17.2",
+        "sass": "^1.17.4",
         "sass-loader": "^7.1.0",
-        "vue": "^2.6.8",
-        "vue-template-compiler": "^2.6.8",
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10",
         "webpack": "^4.29.6"
     },
     "dependencies": {
         "ant-design-icons": "^1.3.3",
         "array-to-tree": "^3.3.0",
-        "element-ui": "^2.6.1",
+        "element-ui": "^2.7.2",
         "laravel-echo": "^1.5.3",
-        "laravel-file-manager": "^2.1.4",
+        "laravel-file-manager": "^2.2.2",
         "pusher-js": "^4.4.0",
         "slugify": "^1.3.4",
         "vee-validate": "^2.2.0",
@@ -42,6 +42,7 @@
         "vue-notification": "^1.3.16",
         "vue-page-title": "^1.1.4",
         "vue-router": "^3.0.2",
+        "vue-scrollto": "^2.15.0",
         "vue-tinymce-editor": "^1.6.2",
         "vuex": "^3.1.0",
         "webpack-dev-server": "^3.2.0"
