--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "vue-router": "^3.0.2",
         "vue-scrollto": "^2.15.0",
         "vue-tinymce-editor": "^1.6.2",
+        "vuejs-paginate": "^2.1.0",
         "vuex": "^3.1.0",
         "webpack-dev-server": "^3.2.0"
     }
