--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "genealabs/laravel-model-caching": "0.3.7",
         "intervention/image": "^2.4",
+        "itsgoingd/clockwork": "^3.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
@@ -21,7 +22,6 @@
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.4",
         "beyondcode/laravel-dump-server": "^1.2",
         "filp/whoops": "^2.0",
