--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "vue-clipboard2": "^0.3.0",
         "vue-croppa": "^1.3.8",
         "vue-feather-icons": "^4.10.0",
+        "vue-fragment": "^1.5.0",
         "vue-notification": "^1.3.16",
         "vue-page-title": "^1.1.4",
         "vue-router": "^3.0.2",
