--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "vue-croppa": "^1.3.8",
         "vue-feather-icons": "^4.10.0",
         "vue-fragment": "^1.5.0",
+        "vue-loading-overlay": "^3.2.0",
         "vue-notification": "^1.3.16",
         "vue-page-title": "^1.1.4",
         "vue-router": "^3.0.2",
