--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "slugify": "^1.3.4",
         "vee-validate": "^2.2.2",
         "vue-clipboard2": "^0.3.0",
+        "vue-cookies": "^1.5.13",
         "vue-croppa": "^1.3.8",
         "vue-feather-icons": "^4.10.0",
         "vue-fragment": "^1.5.1",
