--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "vue-page-title": "^1.1.4",
         "vue-router": "^3.0.4",
         "vue-scrollto": "^2.15.0",
+        "vue-select": "^3.0.2",
         "vue-tinymce-editor": "^1.6.2",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.1.0",
