--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "vue-feather-icons": "^4.10.0",
         "vue-fragment": "^1.5.1",
         "vue-loading-overlay": "^3.2.0",
+        "vue-meta": "^1.6.0",
         "vue-notification": "^1.3.16",
         "vue-page-title": "^1.1.4",
         "vue-router": "^3.0.4",
