--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "vue-scrollto": "^2.15.0",
         "vue-select": "^3.0.2",
         "vue-tinymce-editor": "^1.6.2",
+        "vue-youtube": "^1.3.4",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.1.0",
         "webpack-dev-server": "^3.3.1"
