--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,24 @@
-/node_modules
-/public/hot
-/public/storage
-/public/app
-/public/js/app-admin.js
-/public/js/app-admin.js.map
-/public/js/app-public.js
-/public/js/app-public.js.map
-/public/js/manifest.js
-/public/css/app.css
-/public/css/app.css.map
-/public/mix-manifest.json
-/public/js/manifest.js.map
-/public/js/vendor.js
-/public/js/vendor.js.map
-/public/js/app.js
-/storage/*.key
-/vendor
-/.idea
-/.vscode
-/.vagrant
+node_modules
+public/hot
+public/storage
+public/app
+public/js/app-admin.js
+public/js/app-admin.js.map
+public/js/app-public.js
+public/js/app-public.js.map
+public/js/manifest.js
+public/css/app.css
+public/css/app.css.map
+public/mix-manifest.json
+public/js/manifest.js.map
+public/js/vendor.js
+public/js/vendor.js.map
+public/js/app.js
+storage/*.key
+vendor
+.idea
+.vscode
+.vagrant
 Homestead.json
 Homestead.yaml
 npm-debug.log
