delete js files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ node_modules
 public/hot
 public/storage
 public/app
+public/js/admin.js
+public/js/admin.js.map
+public/js/public.js
+public/js/public.js.map
 public/js/app-admin.js
 public/js/app-admin.js.map
 public/js/app-public.js
