--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
         "webpack": "^4.30.0"
     },
     "dependencies": {
-        "ant-design-icons": "^1.3.3",
         "array-to-tree": "^3.3.0",
-        "element-ui": "^2.7.2",
+        "element-ui": "2.8.2",
         "laravel-echo": "^1.5.3",
         "laravel-file-manager": "^2.2.2",
         "pusher-js": "^4.4.0",
         "slugify": "^1.3.4",
         "vee-validate": "^2.2.2",
+        "vue-awesome": "^3.5.3",
         "vue-clipboard2": "^0.3.0",
         "vue-cookies": "^1.5.13",
         "vue-croppa": "^1.3.8",
