--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "sass": "^1.18.0",
         "sass-loader": "^7.1.0",
         "vue": "^2.6.10",
+        "vue-g-select": "git+https://github.com/ibabasik/g-select.git",
         "vue-template-compiler": "^2.6.10",
         "webpack": "^4.30.0"
     },
@@ -48,6 +49,7 @@
         "vue-fragment": "^1.5.1",
         "vue-loading-overlay": "^3.2.0",
         "vue-meta": "^1.6.0",
+        "vue-multiselect": "^2.1.6",
         "vue-notification": "^1.3.16",
         "vue-page-title": "^1.1.4",
         "vue-router": "^3.0.4",
