--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "element-ui": "2.8.2",
         "laravel-echo": "^1.5.3",
         "laravel-file-manager": "^2.2.2",
+        "mobile-device-detect": "^0.2.3",
         "pusher-js": "^4.4.0",
         "slugify": "^1.3.4",
         "vee-validate": "^2.2.2",
